fixed sidebar and made is responsive and the flicker effect also fixed

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -6,5 +6,6 @@
 }
 
 .no-scrollbar::-webkit-scrollbar{
-  display: none;
+  display: none !important;
+
 }
